[build-system]
requires = [
  "pip >= 19.3.1",
  "setuptools >= 42",
  "setuptools_scm[toml] >= 3.5.0",
  "setuptools_scm_git_archive >= 1.1",
  "wheel >= 0.33.6",
]
build-backend = "setuptools.build_meta"

[tool.black]
skip-string-normalization = true
max-line-length = 95

[tool.isort]
profile = "black"
known_first_party = "ruyaml"

[tool.pytest.ini_options]
# ensure we treat warnings as error
filterwarnings = [
  # "error",
  "error::DeprecationWarning",
  "error::PendingDeprecationWarning"
]

[tool.setuptools_scm]
local_scheme = "no-local-version"
