[aliases]
dists = clean --all sdist bdist_wheel

[bdist_wheel]
universal = 1

[metadata]
name = ruyaml
url = https://github.com/pycontribs/ruyaml
project_urls =
    Bug Tracker = https://github.com/pycontribs/ruyaml/issues
    Release Management = https://github.com/pycontribs/ruyaml/releases
    Source Code = https://github.com/pycontribs/ruyaml
description = ruyaml is a fork of ruamel.yaml
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8

history =  file: CHANGES
author = ruyaml Contributors
author_email = pycontribs@googlegroups.com
maintainer = Sorin Sbarnea
maintainer_email = sorin.sbarnea@gmail.com
license = MIT license
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable

    Environment :: Console

    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators

    License :: OSI Approved :: MIT License

    Natural Language :: English

    Operating System :: OS Independent

    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

    Topic :: Utilities
keywords =
    selinux
    virtualenv

[files]
packages =
    ruyaml

[options]
use_scm_version = True
python_requires = >=3.6
package_dir =
  = lib
packages = find:
include_package_data = True
zip_safe = True
install_requires =
    distro>=1.3.0
    setuptools>=39.0

# These are required during `setup.py` run:
setup_requires =
    setuptools_scm >= 1.15.0

[options.extras_require]
docs =
    Sphinx

[options.package_data]
ruyaml =
    py.typed

[options.packages.find]
where = lib

[flake8]
show-source = True
max-line-length = 95
ignore = W503,F405,E203,E402
exclude = _test/lib,.eggs,.hg,.git,.tox,dist,.cache,__pycache__,ruyaml.egg-info
